solving page challenge social tree

--- a/challenge-piloto/pagina-receita.html
+++ b/challenge-piloto/pagina-receita.html
@@ -60,7 +60,7 @@
     </main>
 
     <footer>
-        Feito com &#x2615 por <a href="https://github.com/micaelecarv">Micaele Carvalho!</a> 
+        <p>Feito com &#x2615 por <a href="https://github.com/micaelecarv">Micaele Carvalho!</a></p> 
     </footer>
 </body>
 </html>
